--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@ title: "Get in touch with me."
   </div>
 
   <div class="form-label-group">
-      <textarea name="message" id="inputMessage" rows="7" class="form-control" placeholder="How can we help?" required autofocus></textarea>
+      <textarea name="message" id="inputMessage" rows="7" class="form-control" placeholder="How can I help?" required autofocus></textarea>
       <label for="inputMessage">How can I help?</label>
   </div>
 
